force-app/main/default/objects/Apttus__Office365ReviewDetail__c/Apttus__Office365ReviewDetail__c.object-meta.xml
<CustomObject>
    <description>Stores Office 365 review information</description>
    <label>Office 365 Review Detail</label>
    <nameField>
        <label>Office365ReviewDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Office 365 Review Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>