force-app/main/default/objects/Apttus__Office365ReviewDetail__c/fields/Apttus__DownloadURL__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DownloadURL__c</fullName>
    <description>URL to download the uploaded document</description>
    <inlineHelpText>URL to download the uploaded document</inlineHelpText>
    <label>Download URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>