force-app/main/default/objects/Apttus__Office365ReviewDetail__c/fields/Apttus__FileLink__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FileLink__c</fullName>
    <description>Sharable link to the Office 365 document to send to reviewers</description>
    <inlineHelpText>Sharable link to the Office 365 document to send to reviewers</inlineHelpText>
    <label>File Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>