force-app/main/default/objects/Apttus__Office365ReviewDetail__c/fields/Apttus__Office365StatusType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Office365StatusType__c</fullName>
    <description>Status type of the Office 365 review cycle</description>
    <inlineHelpText>Status type of the Office 365 review cycle</inlineHelpText>
    <label>Office 365 Status Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Upload</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>ReviewEnd</fullName>
            </value>
            <value>
                <fullName>ReviewCancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>