force-app/main/default/objects/Apttus__Office365ReviewDetail__c/fields/Apttus__ReviewCycleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ReviewCycleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Review Cycle lookup</description>
    <inlineHelpText>Review Cycle lookup</inlineHelpText>
    <label>Review Cycle</label>
    <referenceTo>Apttus__ReviewCycle__c</referenceTo>
    <relationshipLabel>Office 365 Review Details</relationshipLabel>
    <relationshipName>Office365ReviewDetails</relationshipName>
    <type>Lookup</type>
</CustomField>