force-app/main/default/objects/Apttus__Office365ReviewDetail__c/fields/Apttus__UploadFileId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__UploadFileId__c</fullName>
    <description>File Id of the uploaded document</description>
    <externalId>true</externalId>
    <inlineHelpText>File Id of the uploaded document</inlineHelpText>
    <label>Upload File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>