force-app/main/default/objects/Apttus__Office365ReviewDetail__c/fields/Apttus__UploadURL__c.field-meta.xml
<CustomField>
    <fullName>Apttus__UploadURL__c</fullName>
    <description>Upload URL of Office 365</description>
    <inlineHelpText>Upload URL of Office 365</inlineHelpText>
    <label>Upload URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>